Changed standard configuration
Changed standard configuration in order to automatically install
SIP_REGISTER

--- a/apps/reg_agent/etc/reg_agent.conf
+++ b/apps/reg_agent/etc/reg_agent.conf
@@ -7,8 +7,8 @@
 # See also proxy_sticky_auth configuration in sems.conf
 # for some (broken) registrars.
 
-#domain=mydomain.net
-#user=myuser
+domain=_IP_SIP_REGISTER_
+user=evoip
 #pwd=verysecret
 # optional (defaults to user):
 #display_name=myuser
