--- a/apps/conference/etc/conference.conf
+++ b/apps/conference/etc/conference.conf
@@ -1,8 +1,8 @@
 # These are needed if you keep audio files in file system
 audio_path=/usr/local/lib/sems/audio/conference
-default_announce=first_participant.wav
-join_sound=beep.wav
-drop_sound=beep.wav
+default_announce=empty.wav
+join_sound=empty.wav
+drop_sound=empty.wav
 
 # These are needed if you keep audio files in MySQL
 #mysql_host=localhost
@@ -33,41 +33,3 @@ playout_type=adaptive_playout
 #default:
 # use_rfc4240_rooms=no
 #
-
-###############################################################
-# RFC4028 Session Timer
-#
-
-# - enables the session timer ([yes,no]; default: no)
-# 
-# enable_session_timer=yes
-
-# - set the "Session-Expires" parameter for the session timer.
-#
-# session_expires=240
-
-# - set the "Min-SE" parameter for the session timer.
-#
-# minimum_timer=90
-
-# -  maximum Timer value we want to accept
-#
-#maximum_timer=900
-
-# session refresh (Session Timer, RFC4028) method
-#
-# INVITE                 - use re-INVITE
-# UPDATE                 - use UPDATE
-# UPDATE_FALLBACK_INVITE - use UPDATE if indicated in Allow, re-INVITE otherwise
-#
-# Default: UPDATE_FALLBACK_INVITE
-#
-# Note: Session Timers are only supported in some applications
-#
-#session_refresh_method=UPDATE
-
-# accept_501_reply - accept 501 reply as successful refresh? [yes|no]
-#
-# Default: yes
-#
-#accept_501_reply=no
